--- a/stylesSW.css
+++ b/stylesSW.css
@@ -421,13 +421,16 @@ footer {
 
 /* ABOUT */
 
+body {
+}
+
 .about__container {
     height: 100vh;
-    background-color: rgb(0, 0, 0, 0.8);
     display: flex;
     justify-content: center;
     text-align: center;
     overflow: hidden;
+    background-color: rgb(0, 0, 0, 0.8);
 }
 
 .about__volume--text {
@@ -564,5 +567,20 @@ h6 {
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+
+    .heading__about {
+        font-size: 32px;
+    }
+
+    .about__volume--text {
+        font-size: 12px;
+    }
+
+    .about__anchor {
+        left: 0;
+        top: 0;
+        padding: 0;
+        margin: 12px;
     }
 }
